--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dukecon</groupId>
     <artifactId>dukecon-server-docker</artifactId>
@@ -9,7 +8,7 @@
     <scm>
         <url>https://github.com/dukecon/dukecon_server_docker</url>
         <connection>scm:git:https://github.com/dukecon/dukecon_server_docker.git</connection>
-        <tag>HEAD</tag>
+        <tag>release/1.1</tag>
     </scm>
 
     <properties>
@@ -97,10 +96,7 @@
 
                                 <assembly>
                                     <basedir>/opt/dukecon</basedir>
-                                    <inline
-                                        xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
-                                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                                        xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
+                                    <inline xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2" xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
                                         <id>dukecon-server</id>
                                         <dependencySets>
                                             <dependencySet>
