--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dukecon</groupId>
     <artifactId>dukecon-server-docker</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
         <url>https://github.com/dukecon/dukecon_server_docker</url>
         <connection>scm:git:https://github.com/dukecon/dukecon_server_docker.git</connection>
-        <tag>release/1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
