--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
                                     <volume>/var/cache/dukecon</volume>
                                 </volumes>
                                 <cmd>
-                                    <shell>java -Djava.security.egd=file:/dev/./urandom -jar /opt/dukecon/dukecon.war ${DUKECON_ARGS}</shell>
+                                    <shell>java -Xms256M -Xmx768M -Djava.security.egd=file:/dev/./urandom -jar /opt/dukecon/dukecon.war ${DUKECON_ARGS}</shell>
                                 </cmd>
 
                                 <assembly>
