--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
                                 <from>java:8u66</from>
                                 <maintainer>gerd@aschemann.net</maintainer>
                                 <tags>
-                                    <tag>latest</tag>
+                                    <tag>release-candidate</tag>
                                     <tag>${project.version}</tag>
                                 </tags>
                                 <ports>
