Fix: allow for test with a "remote" ${DOCKER_HOST}

--- a/pom.xml
+++ b/pom.xml
@@ -119,10 +119,9 @@
                                     <port>dukecon.port:8080</port>
                                 </ports>
                                 <wait>
-                                    <!-- The plugin waits until this URL 
-                                        is reachable via HTTP ... -->
-                                    <url>http://localhost:${dukecon.port}/develop/index.html</url>
-                                    <!-- ... but at max 30 seconds -->
+                                    <!-- The plugin waits until this URL is reachable via HTTP ... -->
+                                    <url>http://${docker.host.address}:${dukecon.port}/develop/index.html</url>
+                                    <!-- ... but at max 90 seconds -->
                                     <time>90000</time>
                                 </wait>
                             </run>
