--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>eu.inspectit.rocks</groupId>
+            <artifactId>inspectit-agent</artifactId>
+            <version>1.6.6</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -106,6 +111,13 @@
                                                 </includes>
                                                 <outputDirectory>.</outputDirectory>
                                                 <outputFileNameMapping>dukecon.war</outputFileNameMapping>
+                                            </dependencySet>
+                                            <dependencySet>
+                                                <includes>
+                                                    <include>eu.inspectit.rocks:inspectit-agent</include>
+                                                </includes>
+                                                <outputDirectory>.</outputDirectory>
+                                                <outputFileNameMapping>inspectit-agent.jar</outputFileNameMapping>
                                             </dependencySet>
                                         </dependencySets>
                                     </inline>
