Fix: need to build a "release candidate" on this branch

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
                                 <from>java:8u72</from>
                                 <maintainer>gerd@aschemann.net</maintainer>
                                 <tags>
+                                    <tag>release-candidate</tag>
                                     <tag>${project.version}</tag>
                                 </tags>
                                 <ports>
