--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dukecon</groupId>
     <artifactId>dukecon-server-docker</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
-        <url>https://github.com/dukecon/dukecon_server_docker</url>
-        <connection>scm:git:https://github.com/dukecon/dukecon_server_docker.git</connection>
-        <tag>HEAD</tag>
+        <url>https://github.com/dukecon/dukecon_server_docker.git</url>
+        <connection>scm:git:git@github.com/dukecon/dukecon_server_docker.git</connection>
     </scm>
 
     <properties>
@@ -46,10 +45,15 @@
     </pluginRepositories>
 
     <distributionManagement>
-        <repository>
-            <id>dukecon</id>
+        <snapshotRepository>
+            <id>dukecon-snapshots</id>
             <name>DukeCon Snapshots</name>
             <url>http://${nexus.repository.host}${nexus.repository.port}${nexus.repository.base}/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>dukecon-releases</id>
+            <name>DukeCon Releases</name>
+            <url>http://${nexus.repository.host}${nexus.repository.port}${nexus.repository.base}/content/repositories/releases</url>
         </repository>
     </distributionManagement>
 
@@ -57,17 +61,31 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dukecon-server-springboot</artifactId>
-            <version>${project.version}</version>
+            <version>1.3-SNAPSHOT</version>
             <type>war</type>
         </dependency>
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.danielflower.mavenplugins</groupId>
+                    <artifactId>multi-module-maven-release-plugin</artifactId>
+                    <version>DC-1.5-SNAPSHOT</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <groupId>com.github.danielflower.mavenplugins</groupId>
+                <artifactId>multi-module-maven-release-plugin</artifactId>
+                <configuration>
+                    <resolveSnapshots>
+                        <!-- TODO: allow for usage of a version property -->
+                        <resolveSnapshot>org.dukecon:dukecon-server-springboot:1.3-SNAPSHOT</resolveSnapshot>
+                    </resolveSnapshots>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jolokia</groupId>
