--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dukecon-server-springboot</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>[1.3.0,1.4.0)</version>
             <type>war</type>
         </dependency>
     </dependencies>
@@ -80,12 +80,6 @@
             <plugin>
                 <groupId>com.github.danielflower.mavenplugins</groupId>
                 <artifactId>multi-module-maven-release-plugin</artifactId>
-                <configuration>
-                    <resolveSnapshots>
-                        <!-- TODO: allow for usage of a version property -->
-                        <resolveSnapshot>org.dukecon:dukecon-server-springboot:1.3-SNAPSHOT</resolveSnapshot>
-                    </resolveSnapshots>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jolokia</groupId>
