--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dukecon</groupId>
     <artifactId>dukecon-server-docker</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>jfs-1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dukecon-server-springboot</artifactId>
-            <version>[1.3.0,1.4.0)</version>
+            <version>jfs-1.3-SNAPSHOT</version>
             <type>war</type>
         </dependency>
     </dependencies>
