Renamed JFS image

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>ascheman/dukecon-server:${project.version}</name>
+                            <name>ascheman/dukecon-server-jfs:${project.version}</name>
                             <build>
                                 <from>java:8u91</from>
                                 <maintainer>gerd@aschemann.net</maintainer>
