--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,9 @@
                                     <volume>/var/cache/dukecon</volume>
                                 </volumes>
                                 <cmd>
-                                    <shell>java -cp /opt/dukecon/lib -Xms256M -Xmx768M -Djava.security.egd=file:/dev/./urandom -jar /opt/dukecon/dukecon.war ${DUKECON_ARGS}</shell>
+                                    <shell>java -Xms256M -Xmx768M -Djava.security.egd=file:/dev/./urandom -jar /opt/dukecon/dukecon.war ${DUKECON_ARGS}</shell>
                                 </cmd>
+                                <workdir>/opt/dukecon</workdir>
                                 <cleanup>false</cleanup>
 
                                 <assembly>
