--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     </dependencies>
 
     <build>
+        <defaultGoal>docker:build</defaultGoal>
         <pluginManagement>
             <plugins>
                 <plugin>
