--- a/pom.xml
+++ b/pom.xml
@@ -83,9 +83,9 @@
                 <artifactId>multi-module-maven-release-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.jolokia</groupId>
+                <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.13.7</version>
+                <version>0.19.0</version>
                 <configuration>
                     <images>
                         <image>
