--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dukecon-server-springboot</artifactId>
-            <version>[1.3.0,1.4.0)</version>
+            <version>1.3-SNAPSHOT</version>
             <type>war</type>
         </dependency>
     </dependencies>
