Add new "dukecon" organization docker tag

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
                                 <tags>
                                     <tag>latest</tag>
                                     <tag>${project.version}</tag>
+                                    <tag>dukecon/dukecon-server:${project.version}</tag>
                                 </tags>
                                 <ports>
                                     <port>8080</port>
