--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>ascheman/dukecon-server:${project.version}</name>
+                            <name>dukecon/dukecon-server:${project.version}</name>
                             <build>
                                 <from>openjdk:8-jre-alpine</from>
                                 <maintainer>gerd@aschemann.net</maintainer>
